fix(css): Fix collapsed admin navbar on desktop

--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -871,7 +871,8 @@ textarea {
 
   .admin-nav {
     flex-direction: column;
-    flex: 0;
+    flex: 1;
+    overflow-y: auto;
   }
 
   .nav-btn {
